# winetop

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  flake.nix
.github/workflows/: ci.yml  release.yml
crates/winetop/: Cargo.toml
crates/winetop-core/: Cargo.toml
crates/winetop-core/src/: classify.rs  error.rs  kill.rs  lib.rs  metrics.rs  model.rs  status.rs  util.rs
crates/winetop-core/src/discover/: freebsd.rs  linux.rs  macos.rs  mod.rs  raw.rs  stub.rs
crates/winetop-core/src/enrich/: bottles.rs  heroic.rs  lutris.rs  mod.rs  steam.rs
crates/winetop/src/: cli.rs  main.rs  status.rs
crates/winetop/src/ui/: app.rs  mod.rs  theme.rs  widgets.rs
docs/: status-bars.md
man/: winetop.1
