[workspace]
resolver = "2"
members = ["crates/winetop-core", "crates/winetop"]
default-members = ["crates/winetop"]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/akovari/winetop"
homepage = "https://github.com/akovari/winetop"
authors = ["akovari"]
rust-version = "1.75"

[workspace.dependencies]
winetop-core = { path = "crates/winetop-core", version = "0.1.3" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
sysinfo = "0.33"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.29"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
nix = { version = "0.29", features = ["signal", "process"] }
regex = "1.11"
dirs = "6.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
