[package]
name = "winetop-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Discovery, session model, and kill engine for winetop"
readme = "../../README.md"

[features]
default = ["lutris"]
lutris = ["dep:rusqlite"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
