[package]
name = "winetop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "htop for Wine prefixes — monitor and kill Wine/Proton sessions"
readme = "../../README.md"
keywords = ["wine", "proton", "tui", "process", "monitor"]
categories = ["command-line-utilities"]

[[bin]]
name = "winetop"
path = "src/main.rs"

[dependencies]
winetop-core = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
chrono = { workspace = true }

[package.metadata.wix]
upgrade-guid = "A1B2C3D4-E5F6-7890-ABCD-EF1234567890"
path-guid = "B2C3D4E5-F6A7-8901-BCDE-F12345678901"
